// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`[containers] <Shell /> renders correctly 1`] = `
<article
  class="Page TestClassName"
>
  <main
    class="Page-body container"
    role="main"
  />
</article>
`;

exports[`[containers] <Shell /> renders correctly when loading 1`] = `
<article
  class="Page isLoading TestClassName"
>
  <main
    class="Page-body container"
    role="main"
  />
</article>
`;
